k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entto-backend
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
          # cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.enttolog.xyz
    secretName: enttolog-xyz-tls
  rules:
  - host: www.enttolog.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: entto-backend
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entto-front
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.enttolog.shop
    secretName: entto-shop-tls
  rules:
  - host: www.enttolog.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: entto-front
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entto-monitor
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pmt.enttolog.shop
    - gf.enttolog.shop
    secretName: entto-shop-monitors-tls
  rules:
  - host: pmt.enttolog.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
  - host: gf.enttolog.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  rules:
  - host: argo.enttolog.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argo.enttolog.shop
    secretName: argocd-secret # do not change, this is provided by Argo CD
